# PokerChipMain

./: .gitignore  CMakeLists.txt  LICENSE  PokerChipMain.code-workspace  README.md  README_porting.md  claude.md  platformio.ini  sdkconfig.poker_chip
.github/: copilot-instructions.md
components/m5dial_lvgl/: CMakeLists.txt  idf_component.yml
components/m5dial_lvgl/include/: lv_conf.h
components/m5dial_lvgl/src/: M5Dial-LVGL.h  encoder.cpp  lv_port_indev.cpp
docs/: README.md  m5unified-architecture.md
examples/hello_world/: platformio.ini
examples/hello_world/src/: hello_world.cpp  idf_component.yml
mp_source/: UIFlow2Micropython.py
src/: CMakeLists.txt  app_main_bridge.cpp  game_state.cpp  game_state.hpp  idf_component.yml  main.cpp
src/hardware/: button.cpp  button.hpp  config.hpp  encoder.cpp  encoder.hpp
src/images/: riccy_png.S
src/input/: encoder_input.cpp  encoder_input.hpp
src/screens/: blind_progression_screen.cpp  blind_progression_screen.hpp  game_active_screen.cpp  game_active_screen.hpp  game_logs_screen.cpp  game_logs_screen.hpp  round_minutes_screen.cpp  round_minutes_screen.hpp  screen.cpp  screen.hpp  screen_manager.cpp  screen_manager.hpp  small_blind_screen.cpp  small_blind_screen.hpp  volume_screen.cpp  volume_screen.hpp
src/storage/: game_log.cpp  game_log.hpp  nvs_storage.cpp  nvs_storage.hpp
src/tasks/: app_tasks.cpp  app_tasks.hpp  small_blind_screen.cpp  small_blind_screen.hpp
src/ui/: ui_assets.cpp  ui_assets.hpp  ui_helpers.hpp  ui_root.cpp  ui_root.hpp  ui_styles.cpp  ui_styles.hpp
tools/: pack_assets.py
